<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <LinearLayout
            android:id="@+id/video_size_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center" >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                style="@style/settings_title_font"
                android:text="@string/video_size"/>
        <RadioGroup
                android:id="@+id/video_quality_group"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <RadioButton
                    android:id="@+id/v720p"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="@string/video720p"/>
            <RadioButton
                    android:id="@+id/v1080p"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="@string/video1080p"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/duration_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_below="@id/video_size_settings"
            android:gravity="center" >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                style="@style/settings_title_font"
                android:text="@string/record_duration"/>
        <RadioGroup
                android:id="@+id/duration_group"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <RadioButton
                    android:id="@+id/radio1Minus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="@string/one_minus"/>
            <RadioButton
                    android:id="@+id/radio3Minus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="@string/threeMinus"/>
            <RadioButton
                    android:id="@+id/radio5Minus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fiveMinus"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/quality_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_below="@id/duration_settings"
            android:gravity="center" >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                style="@style/settings_title_font"
                android:text="@string/photo_quality"/>
        <RadioGroup
                android:id="@+id/photo_quality_group"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <RadioButton
                    android:id="@+id/radio_low"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="@string/low_quality"/>
            <RadioButton
                    android:id="@+id/radio_mid"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="@string/mid_quality"/>
            <RadioButton
                    android:id="@+id/radio_high"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/high_quality"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/sensitivity_settings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_below="@id/quality_settings"
            android:gravity="center" >
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="20dp"
                style="@style/settings_title_font"
                android:text="@string/braking_sensitivity"/>
        <RadioGroup
                android:id="@+id/sensitivity_group"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <RadioButton
                    android:id="@+id/radio_no_sens"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="@string/sens_turn_off"/>
<!--            <RadioButton
                    android:id="@+id/radio_low_sens"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="@string/low_sens"/>-->
            <RadioButton
                    android:id="@+id/radio_mid_sens"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="@string/mid_sens"/>
            <RadioButton
                    android:id="@+id/radio_high_sens"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/high_sens"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:visibility="gone"
            android:layout_marginBottom="8dp">
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ok"/>
        <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/cancel"/>
    </LinearLayout>
</RelativeLayout>